[package]
name = "bevy_clap_console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0", default-features = false, features = [
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_asset",
] }
bevy_egui = "0.18.0"
clap = { version = "4.0.32", features = ["derive"] }
shellwords = "1.1.0"
bevy_clap_console_derive = { path = "bevy_clap_console_derive" }

[dev-dependencies]
bevy = { version = "0.9.0" }
